[package]
name = "vector_track"
version = "0.1.0"
authors = ["Mark Simulacrum <mark.simulacrum@gmail.com>"]
edition = '2018'

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wasm-bindgen = { version = "0.2", default-features = false, features = ["std"] }

[profile.release]
debug = true
lto = true
